# BytSockeTs

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: Architecture.md  Configuration.md  Deployment.md  Home.md  Library-Usage.md  Quick-Start.md  REST-API.md  _config.yml  index.md
src/bybit_ws/: __init__.py  analytics.py  app.py  config.py  exceptions.py  manager.py  models.py  store.py
