[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bybit-ws"
version = "1.0.0"
description = "Real-time Bybit market data ingestion and analytics via WebSocket"
requires-python = ">=3.12"
license = {text = "MIT"}
readme = "README.md"
keywords = ["bybit", "websocket", "trading", "market-data", "fastapi", "real-time"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: FastAPI",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "numpy>=1.26.0",
]

[[project.authors]]
name = "zhulnert-lang"

[project.urls]
Homepage = "https://github.com/zhulnert-lang/BytSockeTs"
Repository = "https://github.com/zhulnert-lang/BytSockeTs"
Issues = "https://github.com/zhulnert-lang/BytSockeTs/issues"
Discussions = "https://github.com/zhulnert-lang/BytSockeTs/discussions"
Documentation = "https://github.com/zhulnert-lang/BytSockeTs/tree/master/docs"

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bybit_ws = ["py.typed"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
warn_return_any = true
